--- a/Finall/login/templates/login/MyPage/Mypage.html
+++ b/Finall/login/templates/login/MyPage/Mypage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/Mypage.css' %}">
-    <script src="{% static 'js/Mypage.js' %}"></script>
+    <script src="{% static 'js/Mypage.js' %}" defer></script>
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
     <title>마이페이지 - FINALL</title>
 </head>
@@ -25,8 +25,12 @@
             <!--변경사항-->
             <ul class="navbar_login">
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout' %}">로그아웃<i class="fa-regular fa-user"></i></a></li>
+                <div class="logoutBtn">
+                    <li><a href="{% url 'logout' %}">로그아웃</a></li>
+                </div>
+                <div class="mypageBtn">
                     <li><a href="{% url 'mypage' %}">마이페이지<i class="fa-regular fa-user"></i></a></li>
+                </div>
                 {% else %}
                     <li><a href="{% url 'login' %}">로그인<i class="fa-regular fa-user"></i></a></li>
                 {% endif %}
@@ -50,42 +54,48 @@
             <!-- form 태그 추가 -->
             <form method="post" action="{% url 'mypage' %}">
                 {% csrf_token %}
-                <div class="inform d-flex justify-content-center">
-                    <p>개인 정보 </p>  
+                <div class="inform_tool">
+                    <div class="inform">
+                        <p>개인 정보 </p>  
+                    </div>
+                    <div class="line"></div>
                 </div>
-                <div class="line"></div>
                 <div class="correct">
                     <div class="correct_email d-flex justify-content-center">
-                        <p>이메일</p>
-                        <input type="email" name="email" required><br>
+                        <p class="mpbox">이메일</p>
+                        <div class="input">
+                            <input type="email" name="email" required><br>
+                        </div>
                     </div>
                 </div>
                 <div class="correct">
                     <div class="correct_name d-flex justify-content-center">
-                        <p>아이디</p>
+                        <p class="mpbox">아이디</p>
                         <input type="text" name="username" required><br>
                     </div>
                 </div>
-                <div class="newinform d-flex justify-content-center">
-                    <p>비밀번호 변경</p>
+                <div class="newinform_tool">
+                    <div class="newinform">
+                        <p>비밀번호 변경</p>
+                    </div>
+                    <div class="line"></div>
                 </div>
-                <div class="line"></div>
                 <div class="correct">
                     <div class="correct_newpw d-flex justify-content-center">
-                        <p>현재 비밀번호 입력</p>
+                        <p class="mpbox">현재 비밀번호 입력</p>
                         <input type="password" name="old_password" required placeholder="현재의 비밀번호를 입력해주세요.">
                     </div>
                 </div>
                 <div class="correct"></div>
                 <div class="correct">
                     <div class="correct_newpw d-flex justify-content-center">
-                        <p>새 비밀번호 입력</p>
+                        <p class="mpbox">새 비밀번호 입력</p>
                         <input type="password" name="new_password1" required placeholder="새로운 비밀번호를 입력해주세요.">
                     </div>
                 </div>
                 <div class="correct"></div>
                     <div class="correct_newpwcheck d-flex justify-content-center">
-                        <p>새 비밀번호 재확인</p>
+                        <p class="mpbox">새 비밀번호 재확인</p>
                         <input type="password" name="new_password2" required placeholder="변경된 비밀번호를 입력해주세요.">
                     </div>
                 </div>
@@ -102,6 +112,12 @@
                 <button class="tablinks" onclick="openCity(event, '내_답변')">내 답변</button>
             </div>
             <div id="내_질문" class="tabcontent" style="display: none;">
+                <div class="tabheader">
+                    <div class="tabmargin">
+                        <p class="tabheader_header">제목</p>
+                        <p>내용</p>
+                    </div>
+                </div>
                 {% for post in user_posts %}
                 <a href="#">
                     <div class="tablist d-flex">
