--- a/Finall/education/templates/education/Education.html
+++ b/Finall/education/templates/education/Education.html
@@ -11,11 +11,24 @@
     <script src="{% static 'js/Education.js' %}" defer></script>
     <script>
         function redirectToView() {
-            const selectElement = document.getElementById("ed_target");
-            const selectedValue = selectElement.options[selectElement.selectedIndex].value;
-            if (selectedValue) {
-                window.location.href = selectedValue;
+            const searchSelect = document.getElementById("search");
+            const tagSelect = document.getElementById("tag");
+
+            const searchValue = searchSelect.options[searchSelect.selectedIndex].value;
+            const tagValue = tagSelect.options[tagSelect.selectedIndex].value;
+
+            const queryParams = new URLSearchParams();
+
+            if (searchValue) {
+                queryParams.append('search', searchValue);
             }
+            if (tagValue) {
+                queryParams.append('tag', tagValue);
+            }
+        
+            const baseUrl = `{% url 'education' %}`;
+            const newUrl = queryParams.toString() ? `${baseUrl}?${queryParams.toString()}` : baseUrl;
+            window.location.href = newUrl;
         }
     </script>
     <title>교육 선택 - FINALL</title>
@@ -25,12 +38,12 @@
         <!-- nav section -->
         <nav class="navbar fixed-top d-flex justify-content-between align-items-center">
             <div class="navbar_logo">
-                <a href="{% url 'main_page' %}"><img src="{% static 'img/logo.png' %}" alt="브랜드로고"></a>
+                <a href="{% url 'main' %}"><img src="{% static 'img/logo.png' %}" alt="브랜드로고"></a>
             </div>
             <ul class="navbar_menu">
                 <li><a href="{% url 'education' %}">맞춤교육</a></li>
-                <li><a href="{% url 'benefit' %}">맞춤혜택</a></li>
-                <li><a href="{% url 'post_list' %}">맞춤상담</a></li>
+                <li><a href="{% url 'service' %}">맞춤혜택</a></li>
+                <li><a href="{% url 'consult' %}">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
                 <li><a href="{% url 'login' %}">로그인<i class="fa-regular fa-user"></i></a></li>
@@ -48,7 +61,7 @@
             </div>
             <div class="subheader_line"><div class="line"></div></div>
             <div class="search_section">
-                <form class="form-inline" action="{% url 'education_search' %}" method="get"></form>
+                <form class="form-inline" action="{% url 'education' %}" method="get"></form>
                     <div class="search_bar">
                         <input type="text" placeholder="키워드를 입력해주세요." name="search" value="{{search}}">
                     </div>
@@ -64,25 +77,28 @@
         <!--카테고리-->
         <div class="category">
             <section class="optional">
-                <select id="ed_target" onchange="redirectToView()">
-                    <option>서비스 분류</option>
-                    <option value="../education_search/?search=청소년">청소년</option>
-                    <option value="../education_search/?search=대학생">대학생</option>
-                    <option value="../education_search/?search=중장년">중장년</option>
-                    <option value="../education_search/?search=시니어">시니어</option>
-                    <option value="../education_search/?search=장애인">장애인</option>
-                    <option value="../education_search/?search=북한이탈주민">북한이탈주민</option>
+                <select id="search" name="search" onchange="redirectToView()">
+                    <option value="">서비스 분류</option>
+                    <option value="청년" {% if search == "청년" %}selected{% endif %}>청년</option>
+                    <option value="대학생" {% if search == "대학생" %}selected{% endif %}>대학생</option>
+                    <option value="중장년"{% if search == "중장년" %}selected{% endif %}>중장년</option>
+                    <option value="시니어"{% if search == "시니어" %}selected{% endif %}>시니어</option>
+                    <option value="장애인"{% if search == "장애인" %}selected{% endif %}>장애인</option>
+                    <option value="북한이탈주민"{% if search == "북한이탈주민" %}selected{% endif %}>북한이탈주민</option>
                 </select>
             </section>
+
             <section class="optional">
-                <select id="ed_field">
-                    <option>전체</option>
-                    <option value="">부채관리</option>
-                    <option value="">신용관리</option>
-                    <option value="">재무설계</option>
-                    <option value="">소비저축</option>
-                    <option value="">위험관리</option>
-                    <option value="">소비생활</option>
+                <select id="tag" name="tag" onchange="redirectToView()">
+                    <option value="">전체</option>
+                    <option value="창업/운영자금"{% if tag == "창업/운영자금" %}selected{% endif %}>창업/운영자금</option>
+                    <option value="서민금융지원제도"{% if tag == "서민금융지원제도" %}selected{% endif %}>서민금융지원제도</option>
+                    <option value="재무설계"{% if tag == "재무설계" %}selected{% endif %}>재무설계</option>
+                    <option value="저축"{% if tag == "저축" %}selected{% endif %}>저축과 소비</option>
+                    <option value="부채관리"{% if tag == "부채관리" %}selected{% endif %}>부채관리</option>
+                    <option value="신용관리"{% if tag == "신용관리" %}selected{% endif %}>신용관리</option>
+                    <option value="위험관리"{% if tag == "위험관리" %}selected{% endif %}>위험관리</option>
+                    <option value="생활법률"{% if tag == "생활법률" %}selected{% endif %}>생활법률</option>
                 </select>
             </section>
         </div>
@@ -98,7 +114,6 @@
                         <div class="box_content">
                             <p class="ed_name">교육명:{{data.edcSbjcNm}}</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
                             <p>교육 소개: {{data.edcSbjcIntrc}}</p>
-                            <p>교육 시간: 6분</p>
                         </div>
                     </a>   
                 </div>
@@ -108,9 +123,9 @@
                 <a class="cramps" href="?page=1"> << </a>
                 {% for page in range %}
                     {% if page == curPage.number %}
-                    <a class="page-link" href="?page={{page}}">{{page}}</a>
+                    <a class="page-link" href="?search={{search}}&tag={{tag}}&page={{page}}">{{page}}</a>
                     {% else %}
-                    <a class="page-link" href="?page={{page}}" style="color: darkgray;">{{page}}</a>
+                    <a class="page-link" href="?search={{search}}&tag={{tag}}&page={{page}}" style="color: darkgray;">{{page}}</a>
                     {% endif %}
                 {% endfor %}
                 <a class="cramps" href="?page={{paginator.num_pages}}"> >> </a>
