--- a/Finall/service/templates/service/Benefit.html
+++ b/Finall/service/templates/service/Benefit.html
@@ -11,11 +11,24 @@
     <script src="{% static 'js/Benefit.js' %}" defer></script>
     <script>
         function redirectToView() {
-            const selectElement = document.getElementById("ed_target");
-            const selectedValue = selectElement.options[selectElement.selectedIndex].value;
-            if (selectedValue) {
-                window.location.href = selectedValue;
+            const searchSelect = document.getElementById("search");
+            const tagSelect = document.getElementById("tag");
+
+            const searchValue = searchSelect.options[searchSelect.selectedIndex].value;
+            const tagValue = tagSelect.options[tagSelect.selectedIndex].value;
+
+            const queryParams = new URLSearchParams();
+
+            if (searchValue) {
+                queryParams.append('search', searchValue);
             }
+            if (tagValue) {
+                queryParams.append('tag', tagValue);
+            }
+        
+            const baseUrl = `{% url 'service' %}`;
+            const newUrl = queryParams.toString() ? `${baseUrl}?${queryParams.toString()}` : baseUrl;
+            window.location.href = newUrl;
         }
     </script>
     <title>혜택 선택 - FINALL</title>
@@ -25,12 +38,12 @@
         <!-- nav section -->
         <nav class="navbar fixed-top d-flex justify-content-between align-items-center">
             <div class="navbar_logo">
-                <a href="{% url 'main_page' %}"><img src="{% static 'img/logo.png' %}" alt="브랜드로고"></a>
+                <a href="{% url 'main' %}"><img src="{% static 'img/logo.png' %}" alt="브랜드로고"></a>
             </div>
             <ul class="navbar_menu">
                 <li><a href="{% url 'education' %}">맞춤교육</a></li>
-                <li><a href="{% url 'benefit' %}">맞춤혜택</a></li>
-                <li><a href="{% url 'post_list' %}">맞춤상담</a></li>
+                <li><a href="{% url 'service' %}">맞춤혜택</a></li>
+                <li><a href="{% url 'consult' %}">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
                 <li><a href="{% url 'login' %}">로그인<i class="fa-regular fa-user"></i></a></li>
@@ -48,9 +61,9 @@
             </div>
             <div class="subheader_line"><div class="line"></div></div>
             <div class="search_section">
-                <form class="form-inline" action="{% url 'search_service' %}" method="get">
+                <form class="form-inline" action="{% url 'service' %}" method="get">
                     <div class="search_bar">
-                        <input type="text" placeholder="키워드를 입력해주세요." name="search" value="{{search}}">
+                        <input type="text" placeholder="키워드를 입력해주세요." name="search" value="">
                     </div>
                     <div class="searchBtn">
                         <button class="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
@@ -64,26 +77,30 @@
         <!--카테고리-->
         <div class="category">
             <section class="optional">
-                <select id="ed_target" onchange="redirectToView()">
-                    <option>서비스 분류</option>
-                    <option value="../search_service/?search=청소년">청소년</option>
-                    <option value="../search_service/?search=대학생">대학생</option>
-                    <option value="../search_service/?search=중장년">중장년</option>
-                    <option value="../search_service/?search=시니어">시니어</option>
-                    <option value="../search_service/?search=장애인">장애인</option>
-                    <option value="../search_service/?search=북한이탈주민">북한이탈주민</option>
+                <select id="search" name="search" onchange="redirectToView()">
+                    <option value="">서비스 분류</option>
+                    <option value="청소년" {% if search == "청년" %}selected{% endif %}>청년</option>
+                    <option value="대학생" {% if search == "대학생" %}selected{% endif %}>대학생</option>
+                    <option value="중장년"{% if search == "중장년" %}selected{% endif %}>중장년</option>
+                    <option value="시니어"{% if search == "시니어" %}selected{% endif %}>시니어</option>
+                    <option value="장애인"{% if search == "장애인" %}selected{% endif %}>장애인</option>
+                    <option value="북한이탈주민"{% if search == "북한이탈주민" %}selected{% endif %}>북한이탈주민</option>
                 </select>
             </section>
 
             <section class="optional">
-                <select id="ed_field">
-                    <option>전체</option>
-                    <option value="">부채관리</option>
-                    <option value="">신용관리</option>
-                    <option value="">재무설계</option>
-                    <option value="">소비저축</option>
-                    <option value="">위험관리</option>
-                    <option value="">소비생활</option>
+                <select id="tag" name="tag" onchange="redirectToView()">
+                    <option value="">전체</option>
+                    <option value="보육"{% if tag == "보육" %}selected{% endif %}>보육·교육</option>
+                    <option value="근로"{% if tag == "근로" %}selected{% endif %}>근로·자녀장려금</option>
+                    <option value="주거"{% if tag == "주거" %}selected{% endif %}>주거·자립</option>
+                    <option value="농림축산어업"{% if tag == "농림축산어업" %}selected{% endif %}>농림축산어업</option>
+                    <option value="행정"{% if tag == "행정" %}selected{% endif %}>행정·안전</option>
+                    <option value="고용"{% if tag == "고용" %}selected{% endif %}>고용·창업</option>
+                    <option value="고용"{% if tag == "임신" %}selected{% endif %}>임신·출산</option>
+                    <option value="고용"{% if tag == "생활안정" %}selected{% endif %}>생활안정</option>
+                    <option value="고용"{% if tag == "보건" %}selected{% endif %}>보건·의료</option>
+                    <option value="고용"{% if tag == "보호" %}selected{% endif %}>보호·돌봄</option>
                 </select>
             </section>
         </div>
@@ -95,7 +112,7 @@
                     <a href={{data.상세조회URL}}>
                         <div class="box_content">
                             <div class="smallbox">{{data.서비스분야}}</div>
-                            <p class="ed_name">{{data.서비스분야}}</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p class="ed_name">{{data.서비스명}}</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
                             <p>{{data.서비스목적요약}}</p>
                             <ul>
                                 <li>신청 기간: {{data.신청기한}}</li>
@@ -111,9 +128,9 @@
                 <a class="cramps" href="?page=1"> << </a>
                 {% for page in range %}
                     {% if page == curPage.number %}
-                    <a class="page-link" href="?page={{page}}">{{page}}</a>
+                    <a class="page-link" href="?search={{search}}&tag={{tag}}&page={{page}}">{{page}}</a>
                     {% else %}
-                    <a class="page-link" href="?page={{page}}" style="color: darkgray;">{{page}}</a>
+                    <a class="page-link" href="?search={{search}}&tag={{tag}}&page={{page}}" style="color: darkgray;">{{page}}</a>
                     {% endif %}
                 {% endfor %}
                 <a class="cramps" href="?page={{paginator.num_pages}}"> >> </a>
