로그인 페이지 끝

--- a/Finall/login/templates/login/SignUp/Signup.html
+++ b/Finall/login/templates/login/SignUp/Signup.html
@@ -9,6 +9,46 @@
     <link rel="stylesheet" href="{% static 'css/Signup.css' %}">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
     <title>FINALL SignUp</title>
+    <style>
+        .error {
+            color: red;
+        }
+    </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const loginForm = document.querySelector("#login-form"); // 폼 요소의 ID 지정
+    
+            loginForm.addEventListener("submit", async function (event) {
+                event.preventDefault();
+    
+                const csrfToken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
+                const formData = new FormData(loginForm);
+    
+                try {
+                    const response = await fetch(loginUrl, {
+                        method: "POST",
+                        headers: {
+                            "X-CSRFToken": csrfToken,
+                        },
+                        body: formData,
+                    });
+    
+                    if (response.ok) {
+                        // 로그인 성공 시 원하는 페이지로 이동
+                        window.location.href = "/posts/";
+                    } else {
+                        const errorMessage = document.querySelector(".response-message");
+    
+                        errorMessage.innerText = "잘못된 아이디나 패스워드입니다.";
+                        errorMessage.classList.add("error");
+                        errorMessage.classList.remove("success");
+                    }
+                } catch (error) {
+                    console.error("Error while logging in:", error);
+                }
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="display-container">
@@ -65,7 +105,7 @@
                             <input type="password" id="password2" name="password2" placeholder="비밀번호를 확인해주세요." pattern=".{8,25}" required>
                         </div>
                         <div class="tool_loginBtn">
-                            <button type="submit">회원가입</button>
+                            <button type="submit">SignUp</button>
                         </div>
                     </form>
                     <div class="tool_line">
