--- a/Finall/static/css/Login.css
+++ b/Finall/static/css/Login.css
@@ -7,7 +7,9 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-
+a {
+    text-decoration: none;
+}
 /* header section */
 .headerpart {
     display: flex;
@@ -108,45 +110,28 @@ input::placeholder {
     color: white;
 }
 .tool_checkbox {
-    margin: 7px 0 0 33px;
+    display: flex;
+    margin-top: 10px;
 }
-.tool_checkbox span {
+.checkbox_input {
+    padding-left: 35px;
+}
+.tool_checkbox p {
     color: white;
-    font-size: 10px;
+    font-size: 12px;
+    padding-top: 3px;
+    padding-left: 3px;
 }
-/* .tool_checkbox input[type="checkbox"] {
-    display: none;
-}
-.tool_checkbox input[type="checkbox"] + label {
-    display: inline-block;
-    border-radius: 3px;
-    width: 13px;
-    height: 13px;
-    border: 1px solid white;
-    position: relative;
-    z-index: 20;
-}
-.tool_checkbox input[id="check1"]:checked + label::after {
-    content: "✔️";
-    font-size: 4px;
-    padding-bottom: 2px;
-    background: linear-gradient( to bottom, #82bbf2, #c487f0 );
-    width: 11px;
-    height: 11px;
-    text-align: center;
-    position: absolute;
-    z-index: 10;
-} */
 .tool_loginBtn {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 60px;
+    margin-top: 50px;
 }
 .tool_loginBtn button {
     background: linear-gradient( to right, #2e4cee, #030e74 );
     padding: 8px; 
-    border-radius: 10px !important;
+    border-radius: 10px;
     border: none;
     font-size: 17px;
     width: 290px;
@@ -154,42 +139,31 @@ input::placeholder {
     filter: drop-shadow(2px 2px 3px #000000);
 }
 .tool_loginBtn p {
-    margin-bottom: 0 !important;
+    margin-bottom: 0;
 }
-.tool_forgot {
+.tool_forgot p {
     color: white;
     font-size: 12px;
     text-align: center;
-    margin-top: 9px;
+    margin-top: 15px;
 }
-.tool_line {
+.tool_line_section {
     display: flex;
-    flex-basis: 100%;
+    justify-content: space-around;
     align-items: center;
     color: #4c4c4c;
-    margin: 10px 0 0 0;
+    margin: 10px 0;
     font-weight: 600;
 }
-.tool_line:before {
-    content: "";
-    flex-grow: 1;
-    margin: 0 15px 0 30px;
-    background: #4c4c4c;
+.tool_line {
+    margin: 0 10px;
+    width: 120px;
     height: 1px;
-    font-size: 0px;
-    line-height: 0px;
-}
-.tool_line::after {
-    content: "";
-    flex-grow: 1;
-    margin: 0 30px 0 15px;
-    background: #4c4c4c;
-    height: 1px;
-    font-size: 0px;
-    line-height: 0px;
+    border: 1px solid #4c4c4c;
 }
 .tool_line p {
     margin-bottom: 7px;
+    padding-top: 0;
 }
 .tool_icon {
     display: flex;
@@ -206,6 +180,9 @@ input::placeholder {
 }
 .tool_logo {
     display: none;
+}
+.error {
+    color: red;
 }
 
 
